--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,17 @@ h2 {
     text-align: center;
 }
 
+/* Novas funcionalidades */
+#color-value {
+    min-width: 100px;
+}
+
+#inset {
+    align-self: start;
+    height: 20px;
+    width: 20px;
+}
+
 /* Preview */
 #box {
     width: 100%;
@@ -110,4 +121,27 @@ h2 {
 #copy-instructions {
     margin-top: 1rem;
     font-style: italic;
+}
+
+/* Responsivo */
+@media (max-width: 425px) {
+
+    #controls-container,
+    #preview {
+        padding: 1rem 2rem;
+    }
+
+    #box-shadow-generator {
+        flex-direction: column;
+    }
+
+    #box {
+        width: 60%;
+        height: 200px;
+        margin: 0 auto;
+    }
+
+    #generated-rule {
+        margin-top: 1.5rem;
+    }
 }
